// Protocol buffer header descriptor for Isis Control Networks
//
// 2017-12-11 Kristin Berry - Separated header and point into separate files.
// 2018-06-13 Jesse Mapel - Added flag to indicate it is a protobuf 2 file

syntax="proto2";

package Isis;

message ControlNetFileHeaderV0002 {
//  Some fields of ControlNet
  required string networkId    = 1;
  required string targetName   = 2;
  optional string created      = 3;
  optional string lastModified = 4;
  optional string description  = 5;
  optional string userName     = 6;
  repeated int32  pointMessageSizes = 7 [packed = true];
}
